SERVER-20800 block AwaitData if no lastCommitOpTime provided in query parameters.