jstests/noPassthrough/awaitdata_getmore_cmd.js
@@ -83,7 +83,7 @@
         getMore: cmdRes.cursor.id,
         collection: coll.getName(),
         batchSize: NumberInt(2),
-        maxTimeMS: 1000
+        maxTimeMS: 4000
     });
     assert.commandWorked(cmdRes);
     assert.gt(cmdRes.cursor.id, NumberLong(0));
@@ -91,16 +91,18 @@
 
     // Keep issuing getMore until we get an empty batch after the timeout expires.
     while (cmdRes.cursor.nextBatch.length > 0) {
+        var now = new Date();
         cmdRes = db.runCommand({
             getMore: cmdRes.cursor.id,
             collection: coll.getName(),
             batchSize: NumberInt(2),
-            maxTimeMS: 1000
+            maxTimeMS: 4000
         });
         assert.commandWorked(cmdRes);
         assert.gt(cmdRes.cursor.id, NumberLong(0));
         assert.eq(cmdRes.cursor.ns, coll.getFullName());
     }
+    assert.gte((new Date()) - now, 2000);
 
     // Repeat the test, this time tailing the oplog rather than a user-created capped collection.
     cmdRes = localDB.runCommand({
@@ -124,13 +126,16 @@
     assert.eq(cmdRes.cursor.ns, oplogColl.getFullName());
 
     while (cmdRes.cursor.nextBatch.length > 0) {
+        now = new Date();
         cmdRes = localDB.runCommand({
             getMore: cmdRes.cursor.id,
             collection: oplogColl.getName(),
-            maxTimeMS: 1000
+            maxTimeMS: 4000
         });
         assert.commandWorked(cmdRes);
         assert.gt(cmdRes.cursor.id, NumberLong(0));
         assert.eq(cmdRes.cursor.ns, oplogColl.getFullName());
     }
+    assert.gte((new Date()) - now, 2000);
+
 })();
